objects/ASI_CRM_CN_Frequent_Sender__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Accounts_Additional_Field__c</fullName>
        <label>WS Name</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Frequent Senders</relationshipLabel>
        <relationshipName>Frequent_Senders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sender_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sender Name</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Frequent Senders (Sender Name)</relationshipLabel>
        <relationshipName>Frequent_Senders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence__c</fullName>
        <label>Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Frequent Sender</label>
    <nameField>
        <displayFormat>FS-{0000000}</displayFormat>
        <label>Frequent Sender ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frequent Senders</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Frequent_Sender</fullName>
        <active>true</active>
        <label>ASI CRM CN Frequent Sender</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>